gce-host-bastion/instance.tf
resource "google_compute_instance" "vm_instance" {
  name         = "webserver"
  machine_type = "f1-micro"

  tags = ["http-server"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-9"
    }
  }

  network_interface {
    # A default network is created for all GCP projects
    network       = "default"
    access_config = {
      // Ephemeral IP
    }
  }
    metadata_startup_script = "${var.startup-script}"
}
